[package]
name = "gcp-vertex-ai-vizier"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Sebastien Soudan <sebastien.soudan@gmail.com>"]
exclude = [
    "/.github/*",
    "/.cargo/*",
    "/.gitignore",
]
description = """
An async client library for GCP Vertex AI Vizier.
"""
homepage = "https://github.com/ssoudan/gcp-vertex-ai-vizier"
repository = "https://github.com/ssoudan/gcp-vertex-ai-vizier"
documentation = "https://docs.rs/gcp-vertex-ai-vizier"
readme = "README.md"
keywords = ["gcp", "google-cloud", "vizier", "optimization", "hyperparameter"]
categories = ["algorithms", "science"]

[features]
default = []
vendored = ["prost-build/vendored"]

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "e2e"
path = "examples/e2e.rs"

[dev-dependencies]
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }

[lib]
doctest = false

[dependencies]
tonic = { version = "0.8", features = ["tls"] }
prost = "0.10.0"
prost-types = "0.10.0"
tokio = "1.18.2"
thiserror = "1.0.31"
google-authz = {version = "1.0.0-alpha.5", features = ["tonic"]}
regex = "1.5.5"

[build-dependencies]
tonic-build = { version = "0.7", features = ["prost"] }
prost-build = { version = "0.10.4" }

[package.metadata.docs.rs]
features = ["vendored"]
