[package]
name = "gcp-vertex-ai-vizier"
version = "0.4.3"
edition = "2021"
license = "Apache-2.0"
authors = ["Sebastien Soudan <sebastien.soudan@gmail.com>"]
exclude = [
    "/.github/*",
    "/.cargo/*",
    "/.gitignore",
]
description = """
An async client library for GCP Vertex AI Vizier.
"""
homepage = "https://github.com/ssoudan/gcp-vertex-ai-vizier"
repository = "https://github.com/ssoudan/gcp-vertex-ai-vizier"
documentation = "https://docs.rs/gcp-vertex-ai-vizier"
readme = "README.md"
keywords = ["gcp", "google-cloud", "vizier", "optimization", "hyperparameter"]
categories = ["algorithms", "science"]

[features]
default = []

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "e2e"
path = "examples/e2e.rs"

[dev-dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }

[lib]
doctest = false

[dependencies]
tonic = { version = "0.8", features = ["tls"] }
prost = "0.11.0"
prost-types = "0.11.1"
tokio = "1.21.2"
thiserror = "1.0.37"
google-authz = {version = "1.0.0-alpha.5", features = ["tonic"]}
regex = "1.6.0"

[build-dependencies]
tonic-build = { version = "0.9", features = ["prost"] }
prost-build = { version = "0.11.1" }
